welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: Unmatched closing brace '}' ignored here
		} else if ("R") {
                ^BDRBuggle:4: error: illegal start of statement
		} else if ("R") {
                  ^BDRBuggle:11: error: Unmatched closing brace '}' ignored here
			avance();}
                                 ^